[gd_scene load_steps=18 format=3 uid="uid://2dksvogo6exi"]

[ext_resource type="Script" uid="uid://dfue1nrnn2mwp" path="res://scripts/UI_Scripts/select_level_3.gd" id="1_0i7vj"]
[ext_resource type="Shader" uid="uid://chfkq82vmvjuu" path="res://scenes/SelectLevel2.gdshader" id="2_xtuwv"]
[ext_resource type="Texture2D" uid="uid://8gsfsmx8fv71" path="res://assets/Jungle Asset Pack/parallax background/unnamed.jpg" id="3_0iogr"]
[ext_resource type="Texture2D" uid="uid://jeehyp7hpqns" path="res://assets/Jungle Asset Pack/parallax background/Window.png" id="4_2jlim"]
[ext_resource type="FontFile" uid="uid://d081marsgcthd" path="res://assets/Jungle Asset Pack/Pixeled.ttf" id="5_lpat8"]
[ext_resource type="Texture2D" uid="uid://dakrd3uqsu42m" path="res://assets/Jungle Asset Pack/parallax background/Button.png" id="6_q03yg"]
[ext_resource type="Texture2D" uid="uid://cumn5lgfm4a26" path="res://assets/Jungle Asset Pack/parallax background/Screenshot 2025-10-17 152747.png" id="7_swm6w"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bg6gg"]
shader = ExtResource("2_xtuwv")
shader_parameter/speed = 0.1

[sub_resource type="AtlasTexture" id="AtlasTexture_k0dj3"]
atlas = ExtResource("4_2jlim")
region = Rect2(1057, 162, 926, 741)

[sub_resource type="AtlasTexture" id="AtlasTexture_rf23d"]
atlas = ExtResource("4_2jlim")
region = Rect2(1328, 48, 344, 88)

[sub_resource type="AtlasTexture" id="AtlasTexture_6cj5g"]
atlas = ExtResource("6_q03yg")
region = Rect2(759, 668, 181, 189)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rf23d"]
texture = SubResource("AtlasTexture_6cj5g")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_m84f5"]
texture = SubResource("AtlasTexture_6cj5g")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_a2xwi"]
texture = ExtResource("7_swm6w")

[sub_resource type="AtlasTexture" id="AtlasTexture_bg6gg"]
atlas = ExtResource("6_q03yg")
region = Rect2(197, 1190, 181, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_xv5ut"]
atlas = ExtResource("6_q03yg")
region = Rect2(810, 1190, 181, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2xwi"]
atlas = ExtResource("6_q03yg")
region = Rect2(401, 1190, 181, 190)

[node name="SelectLevel3" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0i7vj")

[node name="Background" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_bg6gg")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_0iogr")
expand_mode = 1

[node name="LevelMenu" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -456.0
offset_top = -279.0
offset_right = 444.0
offset_bottom = 268.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_k0dj3")
expand_mode = 1

[node name="Title" type="TextureRect" parent="LevelMenu"]
layout_mode = 0
offset_left = 277.0
offset_top = 11.0
offset_right = 621.0
offset_bottom = 99.0
texture = SubResource("AtlasTexture_rf23d")

[node name="btnlv25" type="Button" parent="LevelMenu"]
layout_mode = 0
offset_left = 40.0
offset_top = 122.0
offset_right = 184.0
offset_bottom = 234.0
theme_override_fonts/font = ExtResource("5_lpat8")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxTexture_rf23d")
theme_override_styles/pressed = SubResource("StyleBoxTexture_m84f5")
theme_override_styles/normal = SubResource("StyleBoxTexture_a2xwi")
text = "25
"

[node name="btnBack" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 281.0
offset_right = 644.0
offset_bottom = 839.0
scale = Vector2(0.2, 0.2)
texture_normal = SubResource("AtlasTexture_bg6gg")
texture_pressed = SubResource("AtlasTexture_xv5ut")
texture_hover = SubResource("AtlasTexture_a2xwi")
stretch_mode = 0

[connection signal="pressed" from="btnBack" to="." method="_on_btn_back_pressed"]
